skype link updated

--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@
                     class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/aflax_digital/" target="_blank" class="instagram"><i
                     class="bx bxl-instagram"></i></a>
-                <a href="https://join.skype.com/invite/NNkT1gOVJ0eT" target="_blank" class="google-plus"><i
+                <a href="skype:live:.cid.8a0b9d3fb92a9233?chat" target="_blank" class="google-plus"><i
                     class="bx bxl-skype"></i></a>
                 <a href="https://www.linkedin.com/in/aflax-digital/" target="_blank" class="linkedin"><i
                     class="bx bxl-linkedin"></i></a>
