--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 CUSTOMERS IN THE MOOD TO BUY
               </h2>
 
-              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+              <a href="#contactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
         </div>
@@ -195,7 +195,7 @@
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: RESTAURANTS</span> <br>
                 COMPLETE THE DINING EXPERIENCE</h2>
 
-              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+              <a href="#contactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
         </div>
@@ -209,7 +209,7 @@
                 A HEALTHY DOSE OF MUSIC – AND MORE
               </h2>
 
-              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+              <a href="#contactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
         </div>
@@ -222,7 +222,7 @@
                 <br>BRING CUSTOMERS BACK
               </h2>
 
-              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+              <a href="#contactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
         </div>
@@ -236,7 +236,7 @@
                 THEM IN THE MOOD TO STAY
               </h2>
 
-              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+              <a href="#contactUs" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
         </div>
@@ -452,7 +452,7 @@
               <!-- CARD HOVER -->
 
               <div class="portfolio-item">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="restaurants.html">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       Digital Menu Boards <br>
@@ -471,7 +471,7 @@
             <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
 
               <div class="portfolio-item">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="hotels.html">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       Commercial Grade Monitors <br>
@@ -491,7 +491,7 @@
             <div class="col-md-3  mx-md-5 m-2 p-2 featureshover">
 
               <div class="portfolio-item">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="retail.html">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       Indoor Advertising Displays <br>
@@ -515,7 +515,7 @@
             <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
 
               <div class="portfolio-item">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="lcd-advertising-display.html">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       Outdoor Advertising Displays <br>
@@ -537,7 +537,7 @@
             <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
 
               <div class="portfolio-item">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="lcd-video-wall.html">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       LCD Video Wall Displays <br>
@@ -556,7 +556,7 @@
             <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
 
               <div class="portfolio-item">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="restaurants.html">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       Digital Self Edges <br>
@@ -578,7 +578,7 @@
             <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
 
               <div class="portfolio-item">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="retail.html">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       POS Android Advertising Displays <br>
@@ -619,7 +619,7 @@
             <div class="col-md-3 mx-md-5 m-2 p-2 featureshover">
 
               <div class="portfolio-item">
-                <a class="portfolio-link" href="#">
+                <a class="portfolio-link" href="restaurants.html">
                   <div class="portfolio-hover">
                     <div class="portfolio-hover-content">
                       Self Service Kiosks <br>
@@ -1206,6 +1206,8 @@
                     class="bx bxl-linkedin"></i></a>
                 <a href="https://wa.me/+252611216363" target="_blank" class="linkedin"><i
                     class="bx bxl-whatsapp"></i></a>
+                <a href="https://pinterest.com/aflaxdigital" target="_blank" class="linkedin"><i
+                    class="bx bxl-pinterest"></i></a>
               </div>
             </div>
           </div>
