--- a/contact.html
+++ b/contact.html
@@ -79,14 +79,18 @@
       <div class="container">
         <div class="row d-flex align-items-center justify-content-evenly">
           <div class="col-md-4 text-center p-2">
-            <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
+            <a class="mail-phone" href="mailto:info@aflax.digital">
+              <h5 class="red-hover-text"><i class="far fa-envelope"></i>info@aflax.digital</h5>
+            </a>
           </div>
           <div class="col-md-4 text-center p-2">
             <a href="index.html"><img style="height: 100px;" class="img-fluid"
                 src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
           </div>
           <div class="col-md-4 text-center p-2">
-            <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
+            <a href="https://wa.me/+252611216363" class="mail-phone" target="_blank">
+              <h5 class="red-hover-text"><i class="fas fa-phone-square-alt"></i>+252 611216363</h5>
+            </a>
           </div>
         </div>
       </div>
@@ -200,7 +204,8 @@
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: RESTAURANTS</span>
                   <br>
-                  COMPLETE THE DINING EXPERIENCE</h2>
+                  COMPLETE THE DINING EXPERIENCE
+                </h2>
                 <!-- <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
                       great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs
                       and content using our cloud software. It’s all on the menu.</p> -->
