--- a/event-places.html
+++ b/event-places.html
@@ -12,7 +12,7 @@
     <!-- Favicons -->
     <!-- <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-  <link href="assets/img/favicon/favicon.png" rel="icon">
+    <link href="assets/img/favicon/favicon.png" rel="icon">
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -79,14 +79,18 @@
             <div class="container">
                 <div class="row d-flex align-items-center justify-content-evenly">
                     <div class="col-md-4 text-center p-2">
-                        <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
+                        <a class="mail-phone" href="mailto:info@aflax.digital">
+                            <h5 class="red-hover-text"><i class="far fa-envelope"></i>info@aflax.digital</h5>
+                        </a>
                     </div>
                     <div class="col-md-4 text-center p-2">
                         <a href="index.html"><img style="height: 100px;" class="img-fluid"
                                 src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
                     </div>
                     <div class="col-md-4 text-center p-2">
-                        <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
+                        <a href="https://wa.me/+252611216363" class="mail-phone" target="_blank">
+                            <h5 class="red-hover-text"><i class="fas fa-phone-square-alt"></i>+252 611216363</h5>
+                        </a>
                     </div>
                 </div>
             </div>
