contact us button

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -194,7 +194,8 @@
                 lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers
                 looking for something special, we offer a range of innovative digital signage retail solutions to make
                 your store stand out. to buy again and again.</p> -->
-                            <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+                            <a href="#contactUs"
+                                class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
                                 Today</a>
                         </div>
                     </div>
@@ -212,7 +213,8 @@
                             <!-- <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
                 great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs
                 and content using our cloud software. It’s all on the menu.</p> -->
-                            <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
+                            <a href="#contactUs"
+                                class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us
                                 Today</a>
                         </div>
                     </div>
@@ -611,7 +613,7 @@
                 <br>
                 <h2 class="text-center text-uppercase text-danger fw-bold">Our Advertisement Locations
                 </h2>
-                <div class="row">
+                <div class="row" id="contactUs">
                     <div class="owl-carousel owl-theme" id="aboutus">
                         <div class="item">
                             <a href="indoor-lcd-display.html">
