--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,7 @@
                       lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers
                       looking for something special, we offer a range of innovative digital signage retail solutions to make
                       your store stand out. to buy again and again.</p> -->
-                <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+                <!-- <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a> -->
               </div>
             </div>
           </div>
@@ -209,7 +209,7 @@
                 <!-- <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
                       great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs
                       and content using our cloud software. It’s all on the menu.</p> -->
-                <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+                <!-- <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a> -->
               </div>
             </div>
           </div>
@@ -225,7 +225,7 @@
                 <!-- <p class="animate__animated animate__fadeInUp">With Aflax’s proven healthcare
                       solutions, you’ll provide a soothing and welcoming environment for your patients. Bundle solutions to
                       reduce overhead costs for maximum ROI.</p> -->
-                <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+                <!-- <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a> -->
               </div>
             </div>
           </div>
@@ -241,7 +241,7 @@
                       and delivering a consistent experience. With our affordable and proven solutions, you’ll drive in-store
                       traffic and build lasting customer loyalty for the repeat business that convenience stores rely on.
                     </p> -->
-                <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+                <!-- <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a> -->
               </div>
             </div>
           </div>
@@ -258,7 +258,7 @@
                       your style – boutique, extended stay, or full service – the right audio, visuals and scent can work
                       together to set the distinct mood that speaks to your brand and your clientele, ensuring lasting guest
                       loyalty.</p> -->
-                <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+                <!-- <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a> -->
               </div>
             </div>
           </div>
