contact us section

--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -1626,35 +1626,32 @@
         <!-- End Clients Section -->
 
         <!-- ======= Contact Section ======= -->
-        <section id="contact" class="contact mt-5">
+        <section id="contact" class="contact" style="margin-top: 0; padding: 20px 0;">
+            <h2 class="text-center"><b><span class="text-white">CONTACT US TODAY</span></b></h2>
             <div class="container">
-                <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="text-white">CONTACT US
-                            TODAY</span></b></h2>
-                <!-- <h2 class="text-center"><b>Book An Online Demo</b></h2> -->
-                <!-- <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-        </div> -->
 
-                <div class="row mt-5">
+                <div class="row">
 
                     <div class="col-lg-4">
                         <div class="info">
                             <div class="address">
                                 <i class="bi bi-geo-alt"></i>
-                                <h4 class="text-white">Location:</h4>
-                                <p class="text-white">A108 Adam Street, New York, NY 535022</p>
+                                <h4 class="text-white">Our Head Office:</h4>
+                                <p class="text-white">Maka Al-mukarama Street, <br> Hodan District <br>
+                                    Mogadishu, Somalia</p>
                             </div>
 
                             <div class="email">
-                                <i class="bi bi-envelope"></i>
-                                <h4 class="text-white">Email:</h4>
-                                <p class="text-white">info@example.com</p>
+                                <i class="bi bi-chat-right-dots-fill"></i>
+                                <h4 class="text-white">Contact Us:</h4>
+                                <p class="text-white" style="color: #ffffff;">Tel: +252 611216363<br> Email:
+                                    info@aflax.digital <br> Website: www.aflax.digital</p>
                             </div>
 
                             <div class="phone">
-                                <i class="bi bi-phone"></i>
-                                <h4 class="text-white">Call:</h4>
-                                <p class="text-white">+1 5589 55488 55s</p>
+                                <i class="bi bi-clock"></i>
+                                <h4 class="text-white">Time:</h4>
+                                <p class="text-white">7:30 AM - 5:00 PM</p>
                             </div>
 
                         </div>
@@ -1663,49 +1660,41 @@
 
                     <div class="col-lg-8 mt-5 mt-lg-0">
 
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                        <form style="margin-top: 25px;">
                             <div class="row">
                                 <div class="col-md-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name"
+                                    <input type="text" name="first_name" class="form-control" id="first_name"
                                         placeholder="Your First Name" required>
                                 </div>
                                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                                    <input type="email" class="form-control" name="email" id="email"
-                                        placeholder="Last Name" required>
+                                    <input type="text" class="form-control" name="last_name" id="last_name"
+                                        placeholder="Your Last Name" required>
                                 </div>
                             </div>
                             <div class="row mt-3">
                                 <div class="col-md-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Email"
+                                    <input type="email" name="email" class="form-control" id="email" placeholder="Email"
                                         required>
                                 </div>
                                 <div class="col-md-6 form-group mt-md-0">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Phone"
+                                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone"
                                         required>
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-md-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name"
+                                <div class="col-md-12 form-group">
+                                    <input type="text" name="organization" class="form-control" id="organization"
                                         placeholder="Organization" required>
                                 </div>
-                                <div class="col-md-6 form-group mt-md-0">
-                                    <input type="email" class="form-control" name="email" id="email"
-                                        placeholder="Delivery Day" required>
-                                </div>
                             </div>
-                            <!-- <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div> -->
-                            <div class="my-3">
+                            <div class="my-3 d-none">
                                 <div class="loading">Loading</div>
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center"><button class="btn btn-light">Submit</button></div>
+                            <div class="text-center"><button class="btn btn-light mt-5 btn-lg"
+                                    onclick="sendMail()">Submit</button>
+                            </div>
                         </form>
 
                     </div>
@@ -1713,7 +1702,8 @@
                 </div>
 
             </div>
-        </section><!-- End Contact Section -->
+        </section>
+        <!-- End Contact Section -->
 
     </main><!-- End #main -->
 
