--- a/index.html
+++ b/index.html
@@ -643,7 +643,8 @@
         </div>
 
       </div>
-    </section><!-- End What we do Section -->
+    </section>
+    <!-- End What we do Section -->
 
     <div class="sky-blue">
       <div class="container mt-5">
@@ -1168,7 +1169,8 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
