--- a/advertising-with-us.html
+++ b/advertising-with-us.html
@@ -1717,17 +1717,32 @@
                         <div class="footer-info">
                             <h3>Aflax Digital Signage</h3>
                             <p>
-                                A108 Adam Street <br>
-                                NY 535022, USA<br><br>
-                                <strong>Phone:</strong> +1 5589 55488 55<br>
-                                <strong>Email:</strong> info@example.com<br>
+                                <strong>Our Head Office</strong>
+                                <br>
+                                Maka Al-mukarama Street, Hodan District
+                                Mogadishu, Somalia <br>
+                                <!-- A108 Adam Street <br>
+                    NY 535022, USA<br><br> -->
+                                <strong>Tel:</strong> +252 611216363<br>
+                                <strong>Email:</strong> info@aflax.digital<br>
+                                <strong>Website:</strong> www.aflax.digital<br>
+                                <strong>Time:</strong> 7:30 AM - 5:00 PM<br>
                             </p>
                             <div class="social-links mt-3">
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                                <a href="https://twitter.com/AflaxDigital" target="_blank" class="twitter"><i
+                                        class="bx bxl-twitter"></i></a>
+                                <a href="https://fb.me/Aflaxdigitalsignage" target="_blank" class="facebook"><i
+                                        class="bx bxl-facebook"></i></a>
+                                <a href="https://www.instagram.com/aflax_digital/" target="_blank" class="instagram"><i
+                                        class="bx bxl-instagram"></i></a>
+                                <a href="skype:live:.cid.8a0b9d3fb92a9233?chat" target="_blank" class="google-plus"><i
+                                        class="bx bxl-skype"></i></a>
+                                <a href="https://www.linkedin.com/in/aflax-digital/" target="_blank" class="linkedin"><i
+                                        class="bx bxl-linkedin"></i></a>
+                                <a href="https://wa.me/+252611216363" target="_blank" class="linkedin"><i
+                                        class="bx bxl-whatsapp"></i></a>
+                                <a href="https://pinterest.com/aflaxdigital" target="_blank" class="linkedin"><i
+                                        class="bx bxl-pinterest"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1736,13 +1751,15 @@
                         <h4>Useful Links</h4>
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="advertising-with-us.html">Advertise With
+                                    Us</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="rental.html">Rental</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Services</h4>
+                        <h4>Industries</h4>
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="retail.html">Retail</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="restaurants.html">Bar / Restaurants</a>
@@ -1754,29 +1771,22 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Products</h4>
+                        <h4>Products</h4>
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="indoor-lcd-display.html">Indoor LCD
                                     Display</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="lcd-video-wall.html">LCD Video Wall</a>
                             </li>
                             <li><i class="bx bx-chevron-right"></i> <a href="lcd-advertising-display.html">LCD
-                                    Advertising Display</a></li>
+                                    Advertising Display</a>
+                            </li>
                             <li><i class="bx bx-chevron-right"></i> <a href="outdoor-lcd-display.html">Outdoor LCD
                                     Display</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="advertising-light-box.html">Advertising
-                                    Light Box</a></li>
+                                    Light Box</a>
+                            </li>
                         </ul>
                     </div>
-
-                    <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
-          </div> -->
 
                 </div>
             </div>
@@ -1784,14 +1794,14 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>AFLAX DIGITAL SIGNAGE</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>AFLAX DIGITAL</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-                Designed by <a href="https://abusalehfaysal.github.io/">Abu Saleh Faysal</a>
+                <!-- Designed by <a href="https://abusalehfaysal.github.io/">Abu Saleh Faysal</a> -->
             </div>
         </div>
     </footer><!-- End Footer -->
@@ -1833,9 +1843,11 @@
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/aos/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/custome.js"></script>
 
     <script>
         AOS.init();
