--- a/led-screen-billboard.html
+++ b/led-screen-billboard.html
@@ -777,17 +777,32 @@
                         <div class="footer-info">
                             <h3>Aflax Digital Signage</h3>
                             <p>
-                                A108 Adam Street <br>
-                                NY 535022, USA<br><br>
-                                <strong>Phone:</strong> +1 5589 55488 55<br>
-                                <strong>Email:</strong> info@aflaxdigitalsignage.com<br>
+                                <strong>Our Head Office</strong>
+                                <br>
+                                Maka Al-mukarama Street, Hodan District
+                                Mogadishu, Somalia <br>
+                                <!-- A108 Adam Street <br>
+                    NY 535022, USA<br><br> -->
+                                <strong>Tel:</strong> +252 611216363<br>
+                                <strong>Email:</strong> info@aflax.digital<br>
+                                <strong>Website:</strong> www.aflax.digital<br>
+                                <strong>Time:</strong> 7:30 AM - 5:00 PM<br>
                             </p>
                             <div class="social-links mt-3">
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                                <a href="https://twitter.com/AflaxDigital" target="_blank" class="twitter"><i
+                                        class="bx bxl-twitter"></i></a>
+                                <a href="https://fb.me/Aflaxdigitalsignage" target="_blank" class="facebook"><i
+                                        class="bx bxl-facebook"></i></a>
+                                <a href="https://www.instagram.com/aflax_digital/" target="_blank" class="instagram"><i
+                                        class="bx bxl-instagram"></i></a>
+                                <a href="skype:live:.cid.8a0b9d3fb92a9233?chat" target="_blank" class="google-plus"><i
+                                        class="bx bxl-skype"></i></a>
+                                <a href="https://www.linkedin.com/in/aflax-digital/" target="_blank" class="linkedin"><i
+                                        class="bx bxl-linkedin"></i></a>
+                                <a href="https://wa.me/+252611216363" target="_blank" class="linkedin"><i
+                                        class="bx bxl-whatsapp"></i></a>
+                                <a href="https://pinterest.com/aflaxdigital" target="_blank" class="linkedin"><i
+                                        class="bx bxl-pinterest"></i></a>
                             </div>
                         </div>
                     </div>
@@ -833,22 +848,13 @@
                         </ul>
                     </div>
 
-                    <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
-          </div> -->
-
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>AFLAX DIGITAL SIGNAGE</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>AFLAX DIGITAL</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
@@ -901,6 +907,7 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/custome.js"></script>
 
     <script>
         AOS.init();
